--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "environment_stage": "Dev",
+  "Message": "We are using Dev💜"
+
 }
